# Time-Of-Flight-Camera-Data

./: .gitignore  CMakeLists.txt  GUI_IMPLEMENTATION_SUMMARY.md  README.md  view_image.html
gui/: README.md  cpp_bridge.py  create_test_ply.py  hardware_gui.py  hardware_simulator.py  main.py  requirements.txt  run_gui.py  run_hardware.py  run_simple_hardware.py  run_unified.py  simple_hardware_gui.py  test_bridge.py  unified_gui.py  verify_perfect.py
hardware_data/: test_complex.ply  test_simple.ply
src/: analysis.hpp  color_map.cpp  color_map.h  main.cpp  main_window.cpp  main_window.h  mock_star_api.cpp  mock_star_api.h  ply_loader.cpp  ply_loader.h  point_cloud_viewer.cpp  point_cloud_viewer.h  tof_data_generator.cpp  tof_data_generator.h  tof_processor.cpp  tof_processor.h  tof_raw_packet.cpp  tof_raw_packet.h
